[gd_scene load_steps=8 format=3 uid="uid://dgg0ydt6egir0"]

[ext_resource type="Theme" uid="uid://dfe36tnn0c1ud" path="res://generic/themes/theme.tres" id="1_kswo8"]
[ext_resource type="Script" path="res://lib/settings_tabs/settings_panel.gd" id="2_jr7se"]
[ext_resource type="PackedScene" uid="uid://bg5bulncs2ejf" path="res://lib/ui/settings/components/stin_input_toggle.tscn" id="2_wdft6"]
[ext_resource type="Script" path="res://lib/ui/clicky_button/clicky_button.gd" id="3_7hwey"]
[ext_resource type="PackedScene" uid="uid://d4avw33snp7bc" path="res://lib/ui/settings/components/stin_input_slider.tscn" id="4_bxpq7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qgkwm"]
content_margin_top = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqd37"]
content_margin_left = 5.0
content_margin_top = 4.0
content_margin_right = 5.0
content_margin_bottom = 4.0
bg_color = Color(0.903598, 0.903598, 0.903598, 1)

[node name="SettingsGeneral" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kswo8")
script = ExtResource("2_jr7se")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("1_kswo8")
theme_override_colors/default_color = Color(0.4, 0.709804, 1, 1)
theme_override_constants/line_separation = -5
theme_override_font_sizes/normal_font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_qgkwm")
bbcode_enabled = true
text = "[center]GENERAL[/center]"
fit_content = true

[node name="Sep" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.4, 0.709804, 1, 1)

[node name="Pad" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="FullScreen" parent="VBox" instance=ExtResource("2_wdft6")]
layout_mode = 2
setting_id = "full_screen"
setting_title = "FULL SCREEN"

[node name="VolShadows" parent="VBox" instance=ExtResource("2_wdft6")]
layout_mode = 2
setting_id = "volumetric_fog"
setting_title = "VOLUMETRIC FOG"

[node name="Bloom" parent="VBox" instance=ExtResource("2_wdft6")]
layout_mode = 2
setting_id = "bloom"
setting_title = "BLOOM"

[node name="Pad2" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="Sep2" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.4, 0.709804, 1, 1)

[node name="Volume" parent="VBox" instance=ExtResource("4_bxpq7")]
layout_mode = 2
setting_id = "volume"
setting_title = "OVERALL VOLUME"
output_as_percentage = true
max_value = 1.0
step = 0.02

[node name="MusVolume" parent="VBox" instance=ExtResource("4_bxpq7")]
layout_mode = 2
setting_id = "music_volume"
setting_title = "MUSIC  VOLUME"
output_as_percentage = true
max_value = 1.0
step = 0.1

[node name="Sep3" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.4, 0.709804, 1, 1)

[node name="FOV" parent="VBox" instance=ExtResource("4_bxpq7")]
layout_mode = 2
setting_id = "fov"
setting_title = "FIELD OF VIEW"
output_suffix = "Â°"
min_value = 50.0

[node name="Sep4" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.4, 0.709804, 1, 1)

[node name="CamSens" parent="VBox" instance=ExtResource("4_bxpq7")]
layout_mode = 2
setting_id = "camera_sensitivity"
setting_title = "ORBIT SENSITIVITY"
min_value = 0.5
max_value = 2.5
step = 0.05

[node name="Sep5" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.4, 0.709804, 1, 1)

[node name="Default" type="Button" parent="VBox"]
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("1_kswo8")
text = "DEFAULT SETTINGS"
script = ExtResource("3_7hwey")

[node name="Menu" type="Button" parent="VBox"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_kswo8")
text = "RETURN TO MENU"
script = ExtResource("3_7hwey")

[node name="Done" type="Button" parent="VBox"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_kswo8")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_hqd37")
text = "DONE"
script = ExtResource("3_7hwey")

[connection signal="pressed" from="VBox/Default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="VBox/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBox/Done" to="." method="_on_done_pressed"]
